# redbyte-hil-suite

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  DEMO_LAUNCH_GUIDE.md  HANDOFF.md  MISSION_COMPLETE.md  Makefile  PROJECT_COMPLETE.md  README.md  README_MODULAR.md  SESSION_REPORT.md  SYSTEM_VERIFICATION.md  UX_CERTIFICATION_COMPLETE.md  install.cmd  launch.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_clean.txt  run.bat  run.py  run_demo.ps1  run_demo_nocon.bat  run_demo_windowed.bat  test_simulator_frame.py
config/: last_layout.json  system_config.json
data/: demo_context_baseline.json  demo_context_fault_sag.json  demo_replay_overlay.json  demo_scenario.json  demo_script.json  insights_log.json  scenario_validation_test.json
docs/: ARCHITECTURE_DECISIONS.md  DEMO_QUICK_REF.md  DEMO_RELEASE_NOTES_2026-04-08.md  DEMO_WALKTHROUGH.md  FRESH_MACHINE_SETUP.md  GAP_ANALYSIS.md  GAP_REMEDIATION_REPORT.md  HARDWARE_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  INGESTION_PIPELINE.md  MODULAR_ARCHITECTURE.md  PROJECT_OVERVIEW.md  PYTHON_SUPPORT.md  QUICK_REFERENCE_CARD.md  QUICK_START_GUIDE.md  QUICK_START_MODULAR.md  REDBYTE_HERITAGE.md  REDBYTE_UX_COMPLETE.md  REPO_HEALTH_REPORT.md  SIMULATION_CONTROLS.md  UI_INTEGRATION.md  UX_CERTIFICATION_REPORT.md  UX_QUICKREF.md  api_reference.md  architecture.md  before_after_comparison.md  context_workflow.md  demo_script.md  deployment_notes.md  design_overview.md  final_report_outline.md  fmea.md  geometry_persistence_fix.md  index.md  launcher_architecture.md  meeting_log_template.md  presentation_walkthrough.md  protocol.md  redbyte_ux_polish.md  test_plan.md  (+1 more)
sample_data/: README.md  demo_session.json  demo_three_phase.csv
scripts/: bootstrap.cmd  build_release.py  capture_screenshots.py  demo_ui_integration.py  final_demo_smoke.py  final_gui_state_smoke.py  final_run_file_audit.py  generate_demo_data.py  generate_demo_session.py  generate_report.py  mock_serial_emulator.py  package_self_check.py  placeholder.txt  preflight_check.py  test_geometry_persistence.py
snapshots/: snapshot_20260201_125221_insight_Phase_Imbalance_metadata.json  snapshot_20260201_125222_insight_Phase_Imbalance_metadata.json  snapshot_20260201_125223_insight_Phase_Imbalance_metadata.json  snapshot_20260201_125223_insight_Recovery_Delay_metadata.json  snapshot_20260201_125224_insight_Phase_Imbalance_metadata.json  snapshot_20260201_125224_insight_Recovery_Delay_metadata.json  snapshot_20260201_125225_insight_Phase_Imbalance_metadata.json  snapshot_20260201_125225_insight_Recovery_Delay_metadata.json  snapshot_20260201_125226_insight_Frequency_Undershoot_metadata.json  snapshot_20260201_125226_insight_Phase_Imbalance_metadata.json  snapshot_20260201_125227_insight_Frequency_Undershoot_metadata.json  snapshot_20260201_125227_insight_Phase_Imbalance_metadata.json  snapshot_20260201_125228_insight_Phase_Imbalance_metadata.json  snapshot_20260201_125229_insight_Phase_Imbalance_metadata.json  snapshot_20260201_125230_insight_Phase_Imbalance_metadata.json  snapshot_20260201_125231_insight_Phase_Imbalance_metadata.json  snapshot_20260201_125232_insight_Phase_Imbalance_metadata.json  snapshot_20260201_125233_insight_Phase_Imbalance_metadata.json  snapshot_20260201_125234_insight_Phase_Imbalance_metadata.json  snapshot_20260201_125235_insight_Phase_Imbalance_metadata.json  snapshot_20260201_125236_insight_Phase_Imbalance_metadata.json  snapshot_20260201_125237_insight_Phase_Imbalance_metadata.json  snapshot_20260201_125238_insight_Phase_Imbalance_metadata.json  snapshot_20260201_125239_insight_Phase_Imbalance_metadata.json  snapshot_20260201_125240_insight_Phase_Imbalance_metadata.json  snapshot_20260201_125241_insight_Phase_Imbalance_metadata.json  (+299 more)
(+181 files in other folders)
