[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hil-verifier-suite"
version = "1.0.0"
description = "Specialized 3-Phase Inverter HIL Telemetry Platform"
authors = [
  { name = "Senior Design Team", email = "team@example.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.4.0",
    "pyqtgraph>=0.13.0",
    "pyserial>=3.5",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "isort",
    "mypy",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
