[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hil-verifier-suite"
version = "1.0.0"
description = "Specialized 3-Phase Inverter HIL Telemetry Platform"
authors = [
  { name = "Senior Design Team", email = "team@example.com" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "PyQt6>=6.4.0",
    "pyqtgraph>=0.13.0",
    "pyserial>=3.5",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "playwright>=1.40.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "playwright>=1.40.0",
    "black",
    "isort",
    "mypy",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "playwright: browser automation tests that require playwright and Chromium",
]
filterwarnings = [
    "ignore:datetime\\.datetime\\.utcfromtimestamp\\(\\) is deprecated and scheduled for removal in a future version.*:DeprecationWarning",
    "error",
]
